force-app/main/default/objects/Elevated_Access_Request__c/Elevated_Access_Request__c.object-meta.xml
<CustomObject>
    <label>Elevated Access Request</label>
    <nameField>
        <displayFormat>EAR-{0000000000}</displayFormat>
        <label>Elevated Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elevated Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>