force-app/main/default/objects/Elevated_Access_Request__c/fields/Approved_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved By Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>