force-app/main/default/objects/Elevated_Access_Request__c/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Date Time</label>
    <type>DateTime</type>
</CustomField>