force-app/main/default/objects/Elevated_Access_Request__c/fields/Current_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Profile_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>