force-app/main/default/objects/Elevated_Access_Request__c/fields/For_User__c.field-meta.xml
<CustomField>
    <fullName>For_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>For User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Elevated_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>