force-app/main/default/objects/Elevated_Access_Request__c/fields/For_User_Name__c.field-meta.xml
<CustomField>
    <fullName>For_User_Name__c</fullName>
    <formula>For_User__r.FirstName &amp; &#39; &#39; &amp; For_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>