force-app/main/default/objects/Elevated_Access_Request__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <defaultValue>NOW() + (0.04167 * 4)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>From Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>