force-app/main/default/objects/Elevated_Access_Request__c/fields/Last_Update_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Timestamp__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Update Timestamp</label>
    <type>DateTime</type>
</CustomField>