force-app/main/default/objects/Elevated_Access_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>