force-app/main/default/objects/Elevated_Access_Request__c/fields/Time_Diff__c.field-meta.xml
<CustomField>
    <fullName>Time_Diff__c</fullName>
    <formula>&#39;From: &#39; &amp; TEXT(DATETIMEVALUE(From_Date__c)) &amp; 
&#39;; To: &#39; &amp; TEXT(DATETIMEVALUE(To_Date__c)) &amp; 
&#39;; Diff: &#39; &amp; TEXT(DATETIMEVALUE(To_Date__c) - DATETIMEVALUE(From_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Diff</label>
    <type>Text</type>
</CustomField>