force-app/main/default/objects/Elevated_Access_Request__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <defaultValue>NOW() + (0.04167 * 8)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>To Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>