force-app/main/default/objects/Elevated_Access_Request__c/validationRules/Check_diff_between_From_and_To_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_diff_between_From_and_To_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>(DATETIMEVALUE( To_Date__c ) -  DATETIMEVALUE( From_Date__c )) &lt; 0</errorConditionFormula>
    <errorDisplayField>To_Date__c</errorDisplayField>
    <errorMessage>Difference between To Date &amp; From Date should be atleast 30 minutes</errorMessage>
</ValidationRule>